# exhume_agent

./: Cargo.toml  artifacts.yaml
src/: agent.rs  config.rs  db_helpers.rs  evidence_io.rs  index.rs  lib.rs  main.rs  paths.rs  report.rs  tui.rs  ui.rs
src/tools/: detect_fs.rs  extract_file.rs  list_dir.rs  mod.rs  notes.rs  partitions.rs  query_index.rs  report.rs  shell.rs  specialists.rs
