[workspace]

[patch.crates-io]
exhume_artefacts  = { path = "../exhume_artefacts" }
exhume_body       = { path = "../exhume_body" }
exhume_filesystem = { path = "../exhume_filesystem" }
exhume_partitions = { path = "../exhume_partitions" }
exhume_extfs      = { path = "../exhume_extfs" }
exhume_exfat      = { path = "../exhume_exfat" }
exhume_lvm        = { path = "../exhume_lvm" }
exhume_ntfs       = { path = "../exhume_ntfs" }
exhume_apfs       = { path = "../exhume_apfs" }
exhume_indexer    = { path = "../exhume_indexer" }

[package]
name = "exhume_agent"
version = "0.1.1"
edition = "2021"
description = "Autonomous forensic assistant CLI using LLMs and the Exhume framework."
repository = "https://github.com/forensicxlab/exhume"
documentation = "https://github.com/forensicxlab/exhume"
authors = ["Thanatology Assistant", "k1nd0ne"]
license = "GPL-2.0-or-later"

[lib]
name = "exhume_agent"
path = "src/lib.rs"

[[bin]]
name = "exhume-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Terminal output
colored = "2.1"

# LLM Framework
rig-core = "=0.31.0"

# Error handling and tracing
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Exhume Core dependencies
exhume_body = { path = "../exhume_body" }
exhume_partitions = { path = "../exhume_partitions" }
exhume_filesystem = { path = "../exhume_filesystem" }
exhume_lvm = { path = "../exhume_lvm" }
exhume_indexer = { path = "../exhume_indexer" }

# Database
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
exhume_artefacts = { path = "../exhume_artefacts" }
hex = "0.4"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
tempfile = "3.26.0"
base64 = "0.22.1"
log = "0.4.29"
indicatif = "0.17"
prettytable-rs = { version = "0.10", features = ["win_crlf"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
